hsmc-macros/tests/ui/t9_4_default_self_cycle.stderr
error: default-transition cycle detected: A -> A (entering any state in this cycle would loop forever before reaching user code)
  --> tests/ui/t9_4_default_self_cycle.rs:17:9
   |
17 |         default(A);
   |         ^^^^^^^
